--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation</title>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
+    <title>Gumdrop Mountains Resort</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css" />
     <link rel="stylesheet" href="./stylesheets/app.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -17,101 +17,186 @@
         <img src="http://dummyimage.com/970x400" alt="A Dummy Image">
     </div>
 
-    <div class="row">
-        <div class="small-12 columns">
-            <div class="contain-to-grid sticky">
-                <nav class="top-bar" data-topbar role="navigation">
-                    <ul class="title-area">
-                        <li class="name">
-                            <h1><a href="#">My Site</a></h1>
-                        </li>
-                        <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                        <li class="toggle-topbar menu-icon">
-                            <a href="#">
-                                <span>Menu</span>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <section class="top-bar-section">
-                        <!-- Right Nav Section -->
-                        <ul class="right">
-                            <li class="active"><a href="#">Right Button Active</a></li>
-                            <li class="has-dropdown">
-                                <a href="#">Right Button Dropdown</a>
-                                <ul class="dropdown">
-                                    <li><a href="#">First link in dropdown</a></li>
-                                    <li class="active"><a href="#">Active link in dropdown</a></li>
-                                </ul>
+    <section class="primary-nav">
+        <div class="row">
+            <div class="small-12 columns">
+                <div class="contain-to-grid sticky">
+                    <nav class="top-bar" data-topbar role="navigation">
+                        <ul class="title-area">
+                            <li class="name">
+                                <h1><a href="#">My Site</a></h1>
                             </li>
-                            <li class="has-form">
-                                <div class="row collapse">
-                                    <div class="large-8 small-9 columns">
-                                        <input type="text" placeholder="Find Stuff">
-                                    </div>
-                                    <div class="large-4 small-3 columns">
-                                        <a href="#" class="alert button expand">Search</a>
-                                    </div>
-                                </div>
+                            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                            <li class="toggle-topbar menu-icon">
+                                <a href="#">
+                                    <span>Menu</span>
+                                </a>
                             </li>
                         </ul>
 
-                        <!-- Left Nav Section -->
-                        <ul class="left">
-                            <li><a href="#">Left Nav Button</a></li>
-                        </ul>
-                    </section>
-                </nav>
+                        <section class="top-bar-section">
+                            <!-- Right Nav Section -->
+                            <ul class="right">
+                                <li class="active"><a href="#">Right Button Active</a></li>
+                                <li class="has-dropdown">
+                                    <a href="#">Right Button Dropdown</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">First link in dropdown</a></li>
+                                        <li class="active"><a href="#">Active link in dropdown</a></li>
+                                    </ul>
+                                </li>
+                                <li class="has-form">
+                                    <div class="row collapse">
+                                        <div class="large-8 small-9 columns">
+                                            <input type="text" placeholder="Find Stuff">
+                                        </div>
+                                        <div class="large-4 small-3 columns">
+                                            <a href="#" class="alert button expand">Search</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+
+                            <!-- Left Nav Section -->
+                            <ul class="left">
+                                <li><a href="#">Left Nav Button</a></li>
+                            </ul>
+                        </section>
+                    </nav>
+                </div>
             </div>
-
-            <div class="small-slider">
-              <div><img src="http://dummyimage.com/320x160" alt="A Dummy Image"></div>
-              <div><img src="http://dummyimage.com/320x160" alt="A Dummy Image"></div>
-              <div><img src="http://dummyimage.com/320x160" alt="A Dummy Image"></div>
-            </div>
-
-
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-    </div>
+    </section>
+
+    <section class="promoText">
+        <div class="row">
+            <div class="small-7 columns">
+                <h2>Welcome</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit ducimus nulla sed quas, id delectus ex, minus quidem!</p>
+                <a href="#" role="button" class="button">Primary Action</a>
+            </div>
+            <div class="small-5 columns">
+                <div class="small-slider">
+                    <div>
+                        <img src="http://dummyimage.com/390x200" alt="A Dummy Image">
+                    </div>
+                    <div>
+                        <img src="http://dummyimage.com/390x200" alt="A Dummy Image">
+                    </div>
+                    <div>
+                        <img src="http://dummyimage.com/390x200" alt="A Dummy Image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gallery">
+        <div class="row">
+            <div class="small-8 columns">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde aliquid doloribus reiciendis corporis quod pariatur, dicta quos perspiciatis fuga voluptatem aspernatur, molestiae sequi dolores cupiditate itaque magnam commodi vitae molestias.</p>
+            </div>
+            <div class="small-4 columns">
+                <h2>Section Head</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="small-4 columns">
+                <img src="http://dummyimage.com/400x300" alt="A Dummy Image">
+            </div>
+            <div class="small-4 columns">
+                <img src="http://dummyimage.com/400x300" alt="A Dummy Image">
+            </div>
+            <div class="small-4 columns">
+                <img src="http://dummyimage.com/400x300" alt="A Dummy Image">
+            </div>
+        </div>
+    </section>
+    <section class="navigation">
+        <div class="row">
+            <div class="small-7 columns">
+                <h2>Find Your Next Getaway</h2>
+                <div class="row">
+                    <a class="button medium info">
+                        <div class="row">
+                            <div class="small-2 columns">
+                                <i class="fa fa-map-marker fa-2x"></i>
+                            </div>
+                            <div class="small-10 columns">
+                                19111 W. Absurd Rd.<br>
+                                Interest, Abs 55555
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="row">
+                    <a class="button medium info center">
+                        <div class="row">
+                            <div class="small-2 columns">
+                                <i class="fa fa-phone fa-2x"></i>
+                            </div>
+                            <div class="small-10 columns">
+                                + 34 (410) 555 - 8888
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="small-5 columns">
+                <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:250px;width:388px;"><div id="gmap_canvas" style="height:250px;width:388px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://wpzio.com" id="get-map-data">The Breslin</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(40.805478,-73.96522499999998),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(40.805478, -73.96522499999998)});infowindow = new google.maps.InfoWindow({content:"<b>The Breslin</b><br/>2880 Broadway<br/> New York" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            </div>
+        </div>
+    </section>
+    <section class="promo-feature">
+        <div class="row">
+            <div class="small-12 column">
+                <div class="promo">
+                    <a href="#" title="Book Magic Now">
+                        <img src="http://dummyimage.com/760x310" alt="A Dummy Image">
+                        <div class="button">Book Magic Now</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
-        ok
+        <div class="row">
+            <div class="small-6 columns">
+                <div class="row">
+                    <ul class="inline-list footer-links">
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                        <li><a href="#">Link 5</a></li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <ul class="inline-list footer-links">
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                        <li><a href="#">Link 5</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="small-6 columns">
+                <p class="copyright">© 2015 Copyright. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
     <script src="js/bundle.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
 
     <script type="text/javascript">
-      $(document).ready(function(){
-        $('.small-slider').slick({
-            nextArrow: '<a href="#" class="slick-next"></a>',
-            prevArrow: '<a href="#" class="slick-prev"></a>'
+        $(document).ready(function() {
+            $('.small-slider').slick({
+                nextArrow: '<a href="#" class="slick-next"></a>',
+                prevArrow: '<a href="#" class="slick-prev"></a>',
+                dots: true
+            });
         });
-      });
     </script>
 
 </body>
