Adds room details partial
Adds room details partial

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -86,6 +86,16 @@
     }
 }
 
+.room-details {
+    background-color: #fff;
+    padding: 40px 0;
+
+    .details {
+        font-size: 14px;
+    }
+
+}
+
 .room-tile {
     background-color: #fff;
     padding: 40px 0;
