Updates heads partial to be dynamic
Adds support to pass in a title and a header (h1) description for the
page.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,8 @@
 
-    @@include('./head.html')
-
+    @@include('./head.html', {
+        "title": "",
+        "header": "Gumdrop Mountains Resort & Spa"
+    })
     @@include('./primary_nav.html')
 
     @@include('./promo_text.html', {
