--- a/src/templates/partials/head.html
+++ b/src/templates/partials/head.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gumdrop Mountains Resort</title>
+    <title>Gumdrop Mountains Resort @@title</title>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css" />
     <link rel="stylesheet" href="./stylesheets/app.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -13,6 +13,6 @@
 <body>
 
     <div class="masthead">
-        <h1>Gumdrop Mountains Resort & Spa</h1>
+        <h1>@@header</h1>
         <img src="http://dummyimage.com/970x400" alt="A Dummy Image">
     </div>
