--- a/src/templates/rooms.html
+++ b/src/templates/rooms.html
@@ -1,5 +1,8 @@
 
-    @@include('./head.html')
+    @@include('./head.html', {
+        "title": "- All Rooms",
+        "header": "Gumdrop Mountains Resort & Spa"
+    })
 
     @@include('./primary_nav.html')
 
