Updates primary nav to include new room pages

--- a/src/templates/partials/primary_nav.html
+++ b/src/templates/partials/primary_nav.html
@@ -34,22 +34,22 @@
                             <!-- Left Nav Section -->
                             <ul class="left">
                                 <li class="has-dropdown">
-                                    <a href="#">Stay</a>
+                                    <a href="#">Stay at Resort</a>
                                     <ul class="dropdown">
                                         <li><a href="rooms.html">All Rooms</a></li>
                                         <li><a href="room-small.html">Small Room</a></li>
-                                        <li><a href="#">Medium Room</a></li>
-                                        <li><a href="#">Large Room</a></li>
-                                        <li><a href="#">Double Room</a></li>
-                                        <li><a href="#">Executive Room</a></li>
+                                        <li><a href="room-medium.html">Medium Room</a></li>
+                                        <li><a href="room-large.html">Large Room</a></li>
+                                        <li><a href="room-double.html">Double Room</a></li>
+                                        <li><a href="room-executive.html">Executive Room</a></li>
                                     </ul>
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="#">Spa</a>
+                                    <a href="#">Relax at Spa</a>
                                     <ul class="dropdown">
                                         <li><a href="#">About</a></li>
                                         <li><a href="#">Hours</a></li>
-                                        <li><a href="#">Book Appointment</a></li>
+                                        <li><a href="#">Book Session</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Events</a></li>
