Updates featured room to large on rooms page

--- a/src/templates/rooms.html
+++ b/src/templates/rooms.html
@@ -10,7 +10,7 @@
         "header": "All Our Great Rooms",
         "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
         "button": "Our Highest Rated",
-        "link": "#"
+        "link": "room-large.html"
     })
 
     @@include('./gallery_slider.html')
@@ -21,18 +21,18 @@
         "style": "light",
         "desc": {
             "one": "Queen Bed",
-            "two": "Walk in Closet",
-            "three": "Walk-out Balcony",
-            "four": "Mountain View"
+            "two": "Lit Closet",
+            "three": "Jucuzzi Tube",
+            "four": "Easy Pool Access"
         }
     })
 
     @@include('./room_tile.html', {
         "name": "Medium Room",
-        "price": "199.98",
+        "price": "275.98",
         "style": "dark",
         "desc": {
-            "one": "Queen Bed",
+            "one": "King Bed",
             "two": "Walk in Closet",
             "three": "Walk-out Balcony",
             "four": "Mountain View"
@@ -41,25 +41,25 @@
 
     @@include('./room_tile.html', {
         "name": "Large Room",
-        "price": "199.98",
+        "price": "399.98",
         "style": "light",
         "desc": {
-            "one": "Queen Bed",
+            "one": "Two Queen Beds",
             "two": "Walk in Closet",
             "three": "Walk-out Balcony",
-            "four": "Mountain View"
+            "four": "Kitchenette"
         }
     })
 
     @@include('./room_tile.html', {
         "name": "Double Room",
-        "price": "199.98",
+        "price": "562.98",
         "style": "dark",
         "desc": {
-            "one": "Queen Bed",
+            "one": "Two King Beds",
             "two": "Walk in Closet",
-            "three": "Walk-out Balcony",
-            "four": "Mountain View"
+            "three": "Living Space",
+            "four": "Full Kitchen"
         }
     })
 
@@ -68,10 +68,10 @@
         "price": "799.98",
         "style": "light",
         "desc": {
-            "one": "Queen Bed",
-            "two": "Walk in Closet",
+            "one": "Three Bedrooms with King Beds",
+            "two": "Two Bathrooms",
             "three": "Walk-out Balcony",
-            "four": "Mountain View"
+            "four": "Private Jr. Olympic Pool"
         }
     })
 
