--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -3,18 +3,17 @@
         <div class="small-6 columns">
             <div class="row">
                 <ul class="inline-list footer-links">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                    <li><a href="#">Link 4</a></li>
-                    <li><a href="#">Link 5</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="rooms.html">Our Rooms</a></li>
+                    <li><a href="spa.html">Spa</a></li>
+                    <li><a href="events.html">Events</a></li>
                 </ul>
             </div>
             <div class="row">
                 <ul class="inline-list footer-links">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="search.html">Search</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="book.html">Book Now</a></li>
                     <li><a href="#">Link 4</a></li>
                     <li><a href="#">Link 5</a></li>
                 </ul>
