Adds spa links to primary nav

--- a/src/templates/partials/primary_nav.html
+++ b/src/templates/partials/primary_nav.html
@@ -47,9 +47,9 @@
                                 <li class="has-dropdown">
                                     <a href="#">Relax at Spa</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">Hours</a></li>
-                                        <li><a href="#">Book Session</a></li>
+                                        <li><a href="spa.html">About</a></li>
+                                        <li><a href="spa.html#hours">Hours</a></li>
+                                        <li><a href="spa.html#book">Book Session</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Events</a></li>
