Updates room details pages to fix page title

--- a/src/templates/room-double.html
+++ b/src/templates/room-double.html
@@ -1,6 +1,6 @@
 
     @@include('./head.html', {
-        "title": "- Small Room",
+        "title": "- Double Room",
         "header": "Gumdrop Mountains Resort & Spa"
     })
 
