--- a/src/templates/room-medium.html
+++ b/src/templates/room-medium.html
@@ -1,6 +1,6 @@
 
     @@include('./head.html', {
-        "title": "- Small Room",
+        "title": "- Medium Room",
         "header": "Gumdrop Mountains Resort & Spa"
     })
 
