--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,28 +1,26 @@
 
     @@include('./head.html', {
-        "title": "",
+        "title": "- Contact us",
         "header": "Gumdrop Mountains Resort & Spa"
     })
     @@include('./primary_nav.html')
 
     @@include('./promo_text.html', {
-        "header": "Welcome",
+        "header": "Get Help",
         "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
-        "button": "Our Specials",
+        "button": "Contact Us",
         "link": "rooms.html"
     })
 
-    @@include('./gallery.html', {
-        "title": "Gallery"
-    })
-
     @@include('./navigation.html', {
-        "title": "Find Your Next Getaway",
+        "title": "Contact Us",
         "address1": "19111 W. Absurd Rd.",
         "address2": "Interest, Abs 55555",
         "phone": "+ 34 (410) 555 - 8888",
-        "style": "light"
+        "style": "dark"
     })
+
+    @@include('./contact_form.html')
 
     @@include('./promo_feature.html')
 
