--- a/src/templates/partials/navigation.html
+++ b/src/templates/partials/navigation.html
@@ -1,7 +1,7 @@
-<section class="navigation">
+<section class="navigation @@style">
     <div class="row">
         <div class="small-7 columns">
-            <h2>Find Your Next Getaway</h2>
+            <h2>@@title</h2>
             <div class="row">
                 <a class="button medium info">
                     <div class="row">
@@ -9,8 +9,7 @@
                             <i class="fa fa-map-marker fa-2x"></i>
                         </div>
                         <div class="small-10 columns">
-                            19111 W. Absurd Rd.<br>
-                            Interest, Abs 55555
+                            @@address1<br>@@address2
                         </div>
                     </div>
                 </a>
@@ -22,7 +21,7 @@
                             <i class="fa fa-phone fa-2x"></i>
                         </div>
                         <div class="small-10 columns">
-                            + 34 (410) 555 - 8888
+                            @@phone
                         </div>
                     </div>
                 </a>
