--- a/src/templates/partials/promo_feature.html
+++ b/src/templates/partials/promo_feature.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="small-12 column">
             <div class="promo">
-                <a href="#" title="Book Magic Now">
+                <a href="book.html" title="Book Magic Now">
                     <img src="http://dummyimage.com/760x310" alt="A Dummy Image">
                     <div class="button">Book Magic Now</div>
                 </a>
