--- a/src/templates/partials/room_details.html
+++ b/src/templates/partials/room_details.html
@@ -1,4 +1,4 @@
-<section class="room-details">
+<section class="room-details @@style">
     <div class="row">
         <div class="small-12 column">
             <h3>@@title</h3>
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="small-6 columns">
-            <ul class="details">
+            <ul class="details @@bullet">
                 <li>@@desc.one</li>
                 <li>@@desc.two</li>
                 <li>@@desc.three</li>
@@ -14,7 +14,7 @@
             </ul>
         </div>
         <div class="small-6 columns">
-            <ul class="details">
+            <ul class="details @@bullet">
                 <li>@@desc.five</li>
                 <li>@@desc.six</li>
                 <li>@@desc.seven</li>
