--- a/src/templates/partials/room_tile.html
+++ b/src/templates/partials/room_tile.html
@@ -22,7 +22,7 @@
             </div>
             <div class="row small-collapse">
                 <div class="small-12 columns">
-                    <a href="#" class="button tiny pull-right">Book Room</a>
+                    <a href="book.html" class="button tiny pull-right">Book Room</a>
                 </div>
             </div>
             <div class="row">
