--- a/src/templates/rooms.html
+++ b/src/templates/rooms.html
@@ -13,7 +13,9 @@
         "link": "room-large.html"
     })
 
-    @@include('./gallery_slider.html')
+    @@include('./gallery_slider.html', {
+        "style": "dark"
+    })
 
     @@include('./room_tile.html', {
         "name": "Small Room",
