--- a/src/templates/partials/gallery_slider.html
+++ b/src/templates/partials/gallery_slider.html
@@ -1,4 +1,4 @@
-<section class="gallery-slider">
+<section class="gallery-slider @@style">
     <div class="row">
         <div class="small-12 column">
             <div class="multiple-items">
