--- a/src/templates/partials/primary_nav.html
+++ b/src/templates/partials/primary_nav.html
@@ -25,7 +25,7 @@
                                             <input type="text" placeholder="Find Happy Place">
                                         </div>
                                         <div class="large-4 small-3 columns">
-                                            <a href="#" class="alert button expand">Search</a>
+                                            <a href="search.html" class="alert button expand">Search</a>
                                         </div>
                                     </div>
                                 </li>
@@ -52,7 +52,7 @@
                                         <li><a href="spa.html#book">Book Session</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Events</a></li>
+                                <li><a href="events.html">Events</a></li>
                             </ul>
                         </section>
                     </nav>
