--- a/src/templates/room-double.html
+++ b/src/templates/room-double.html
@@ -9,7 +9,7 @@
     @@include('./room_tile.html', {
         "name": "Double Room",
         "price": "562.98",
-        "style": "dark",
+        "style": "light",
         "desc": {
             "one": "Two King Beds",
             "two": "Walk in Closet",
@@ -18,10 +18,13 @@
         }
     })
 
-    @@include('./gallery_slider.html')
+    @@include('./gallery_slider.html', {
+        "style": "dark"
+    })
 
     @@include('./room_details.html', {
         "title": "Additonal Details",
+        "bullet": "",
         "desc": {
             "one": "Queen Bed",
             "two": "Walk in Closet",
@@ -31,7 +34,8 @@
             "six": "Walk in Closet",
             "seven": "Walk-out Balcony",
             "eight": "Mountain View"
-        }
+        },
+        "style": "light"
     })
 
     @@include('./promo_feature.html')
