Updated language to remove Latin
Removed Latin

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -7,7 +7,7 @@
 
     @@include('./promo_text.html', {
         "header": "Get Help",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
+        "text": "We are alwasy here to answer questions and address your concerns.",
         "button": "Contact Us",
         "link": "rooms.html"
     })
