--- a/src/templates/events.html
+++ b/src/templates/events.html
@@ -8,13 +8,14 @@
 
     @@include('./promo_text.html', {
         "header": "Event Center",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
+        "text": "We have a 4,500 sq. ft. event space that is loaded with tech and built for business and fun.",
         "button": "Book Session",
         "link": "#book"
     })
 
     @@include('./gallery.html', {
-        "title": "Past Events"
+        "title": "Past Events",
+        "text": "Our event space is large, new, and uses the latest presentation technology to enable powerful, or fun gatherings. From karaoke to your next business bash, we can do it. "
     })
 
     @@include('./gallery_slider.html', {
