--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,13 +7,14 @@
 
     @@include('./promo_text.html', {
         "header": "Welcome",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
+        "text": "Gumdrop Mountains - A different type of resort. ",
         "button": "Our Specials",
         "link": "rooms.html"
     })
 
     @@include('./gallery.html', {
-        "title": "Gallery"
+        "title": "Gallery",
+        "text": "Our beautiful decade old resort features the best mountain view in the country in a affordable package."
     })
 
     @@include('./navigation.html', {
