--- a/src/templates/rooms.html
+++ b/src/templates/rooms.html
@@ -8,7 +8,7 @@
 
     @@include('./promo_text.html', {
         "header": "All Our Great Rooms",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
+        "text": "Our luxurary rooms are high-end, loaded with technology, and come with a view unlike any other.",
         "button": "Our Highest Rated",
         "link": "room-large.html"
     })
