--- a/src/templates/spa.html
+++ b/src/templates/spa.html
@@ -8,13 +8,14 @@
 
     @@include('./promo_text.html', {
         "header": "Welcome to the Spa",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perferendis quas a quod, eveniet provident facere.",
+        "text": "Our luxary spa features the calming sent of lavendar with a mountain view.",
         "button": "Book Session",
         "link": "#book"
     })
 
     @@include('./gallery.html', {
-        "title": "Spa-tastic"
+        "title": "Spa-tastic",
+        "text": "Our professional team will help you find your relaxing place. A perfect addition to your retreat at Gumdrop Mountains Resort."
     })
 
     @@include('./gallery_slider.html', {
