--- a/src/templates/room-executive.html
+++ b/src/templates/room-executive.html
@@ -26,14 +26,14 @@
         "title": "Additonal Details",
         "bullet": "",
         "desc": {
-            "one": "Queen Bed",
-            "two": "Walk in Closet",
-            "three": "Walk-out Balcony",
-            "four": "Mountain View",
-            "five": "Queen Bed",
-            "six": "Walk in Closet",
-            "seven": "Walk-out Balcony",
-            "eight": "Mountain View"
+            "one": "Pets Allowed",
+            "two": "Mountaintop View",
+            "three": "No Smoking",
+            "four": "Handicap Accessible",
+            "five": "Room Service is Available",
+            "six": "Pillow Service is Available",
+            "seven": "Down Comforter available by Request",
+            "eight": "Minibar and Safe in room"
         },
         "style": "light"
     })
