Updated gallery to allow text to be overridden

--- a/src/templates/partials/gallery.html
+++ b/src/templates/partials/gallery.html
@@ -1,7 +1,7 @@
 <section class="gallery">
     <div class="row">
         <div class="small-8 columns">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde aliquid doloribus reiciendis corporis quod pariatur, dicta quos perspiciatis fuga voluptatem aspernatur, molestiae sequi dolores cupiditate itaque magnam commodi vitae molestias.</p>
+            <p>@@text</p>
         </div>
         <div class="small-4 columns">
             <h2>@@title</h2>
