--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -5,6 +5,20 @@
     })
     @@include('./primary_nav.html')
 
+    @@include('./breadcrumb.html', {
+        "one": {
+            "link": "index.html",
+            "title": "Home",
+            "current": ""
+        },
+        "two": {
+            "link": "contact.html",
+            "title": "Contact Us",
+            "current": "current"
+        },
+        "three": {}
+    })
+
     @@include('./promo_text.html', {
         "header": "Get Help",
         "text": "We are alwasy here to answer questions and address your concerns.",
