--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,16 @@
     })
     @@include('./primary_nav.html')
 
+    @@include('./breadcrumb.html', {
+        "one": {
+            "link": "index.html",
+            "title": "Home",
+            "current": "current"
+        },
+        "two": {},
+        "three": {}
+    })
+
     @@include('./promo_text.html', {
         "header": "Welcome",
         "text": "Gumdrop Mountains - A different type of resort. ",
