--- a/src/templates/room-small.html
+++ b/src/templates/room-small.html
@@ -6,6 +6,24 @@
 
     @@include('./primary_nav.html')
 
+    @@include('./breadcrumb.html', {
+        "one": {
+            "link": "index.html",
+            "title": "Home",
+            "current": ""
+        },
+        "two": {
+            "link": "rooms.html",
+            "title": "All Rooms",
+            "current": ""
+        },
+        "three": {
+            "link": "room-small.html",
+            "title": "Small Room",
+            "current": "current"
+        }
+    })
+
     @@include('./room_tile.html', {
         "name": "Small Room",
         "price": "199.98",
