--- a/src/templates/spa.html
+++ b/src/templates/spa.html
@@ -6,6 +6,20 @@
 
     @@include('./primary_nav.html')
 
+    @@include('./breadcrumb.html', {
+        "one": {
+            "link": "index.html",
+            "title": "Home",
+            "current": ""
+        },
+        "two": {
+            "link": "spa.html",
+            "title": "Spa",
+            "current": "current"
+        },
+        "three": {}
+    })
+
     @@include('./promo_text.html', {
         "header": "Welcome to the Spa",
         "text": "Our luxary spa features the calming sent of lavendar with a mountain view.",
